// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render list widget 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth makeStyles-MuiFormControl-root"
  >
    <div
      class="makeStyles-propertySectionLabel"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 makeStyles-typography makeStyles-MuiTypography-root"
      >
        myList
      </h6>
    </div>
    <table
      class="MuiTable-root makeStyles-MuiTable-root"
      data-testid="table-myList"
    >
      <tbody
        class="MuiTableBody-root makeStyles-MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root makeStyles-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-cell makeStyles-MuiTableCell-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-canBeSelectedItem makeStyles-style makeStyles-MuiTypography-root"
              data-testid="representation-item1Label"
            >
              item1Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall makeStyles-MuiButtonBase-root-MuiIconButton-root"
              data-testid="delete-representation-item1Label"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root makeStyles-MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-cell makeStyles-MuiTableCell-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-canBeSelectedItem makeStyles-style makeStyles-MuiTypography-root"
              data-testid="representation-item2Label"
            >
              item2Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall makeStyles-MuiButtonBase-root-MuiIconButton-root"
              data-testid="delete-representation-item2Label"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root makeStyles-MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-cell makeStyles-MuiTableCell-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-canBeSelectedItem makeStyles-style makeStyles-MuiTypography-root"
              data-testid="representation-item3Label"
            >
              item3Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall makeStyles-MuiButtonBase-root-MuiIconButton-root"
              data-testid="delete-representation-item3Label"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root makeStyles-MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <p
      class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained makeStyles-MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`render list widget with help hint 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth makeStyles-MuiFormControl-root"
  >
    <div
      class="makeStyles-propertySectionLabel"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 makeStyles-typography makeStyles-MuiTypography-root"
      >
        myList
      </h6>
      <svg
        aria-hidden="true"
        aria-label=""
        class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeMedium makeStyles-MuiSvgIcon-root"
        data-mui-internal-clone-element="true"
        data-testid="HelpOutlineOutlinedIcon"
        focusable="false"
        style="margin-left: 8px; font-size: 16px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
        />
      </svg>
    </div>
    <table
      class="MuiTable-root makeStyles-MuiTable-root"
      data-testid="table-myList"
    >
      <tbody
        class="MuiTableBody-root makeStyles-MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root makeStyles-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-cell makeStyles-MuiTableCell-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-canBeSelectedItem makeStyles-style makeStyles-MuiTypography-root"
              data-testid="representation-item1Label"
            >
              item1Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall makeStyles-MuiButtonBase-root-MuiIconButton-root"
              data-testid="delete-representation-item1Label"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root makeStyles-MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-cell makeStyles-MuiTableCell-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-canBeSelectedItem makeStyles-style makeStyles-MuiTypography-root"
              data-testid="representation-item2Label"
            >
              item2Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall makeStyles-MuiButtonBase-root-MuiIconButton-root"
              data-testid="delete-representation-item2Label"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root makeStyles-MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-cell makeStyles-MuiTableCell-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-canBeSelectedItem makeStyles-style makeStyles-MuiTypography-root"
              data-testid="representation-item3Label"
            >
              item3Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall makeStyles-MuiButtonBase-root-MuiIconButton-root"
              data-testid="delete-representation-item3Label"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root makeStyles-MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <p
      class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained makeStyles-MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`render list widget with style 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth makeStyles-MuiFormControl-root"
  >
    <div
      class="makeStyles-propertySectionLabel"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 makeStyles-typography makeStyles-MuiTypography-root"
      >
        myList
      </h6>
    </div>
    <table
      class="MuiTable-root makeStyles-MuiTable-root"
      data-testid="table-myList"
    >
      <tbody
        class="MuiTableBody-root makeStyles-MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root makeStyles-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-cell makeStyles-MuiTableCell-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-canBeSelectedItem makeStyles-style makeStyles-MuiTypography-root"
              data-testid="representation-item1Label"
            >
              item1Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall makeStyles-MuiButtonBase-root-MuiIconButton-root"
              data-testid="delete-representation-item1Label"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root makeStyles-MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-cell makeStyles-MuiTableCell-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-canBeSelectedItem makeStyles-style makeStyles-MuiTypography-root"
              data-testid="representation-item2Label"
            >
              item2Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall makeStyles-MuiButtonBase-root-MuiIconButton-root"
              data-testid="delete-representation-item2Label"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root makeStyles-MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-cell makeStyles-MuiTableCell-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-canBeSelectedItem makeStyles-style makeStyles-MuiTypography-root"
              data-testid="representation-item3Label"
            >
              item3Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall makeStyles-MuiButtonBase-root-MuiIconButton-root"
              data-testid="delete-representation-item3Label"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root makeStyles-MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <p
      class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained makeStyles-MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`should render a readOnly list from widget properties 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth makeStyles-MuiFormControl-root"
  >
    <div
      class="makeStyles-propertySectionLabel"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 makeStyles-typography makeStyles-MuiTypography-root"
      >
        myList
      </h6>
    </div>
    <table
      class="MuiTable-root makeStyles-MuiTable-root"
      data-testid="table-myList"
    >
      <tbody
        class="MuiTableBody-root makeStyles-MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root makeStyles-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-cell makeStyles-MuiTableCell-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-style makeStyles-MuiTypography-root"
              data-testid="representation-item1Label"
            >
              item1Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root Mui-disabled MuiIconButton-root MuiIconButton-sizeSmall makeStyles-MuiButtonBase-root-MuiIconButton-root"
              data-testid="delete-representation-item1Label"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                />
              </svg>
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-cell makeStyles-MuiTableCell-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-style makeStyles-MuiTypography-root"
              data-testid="representation-item2Label"
            >
              item2Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root Mui-disabled MuiIconButton-root MuiIconButton-sizeSmall makeStyles-MuiButtonBase-root-MuiIconButton-root"
              data-testid="delete-representation-item2Label"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                />
              </svg>
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-cell makeStyles-MuiTableCell-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-style makeStyles-MuiTypography-root"
              data-testid="representation-item3Label"
            >
              item3Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root Mui-disabled MuiIconButton-root MuiIconButton-sizeSmall makeStyles-MuiButtonBase-root-MuiIconButton-root"
              data-testid="delete-representation-item3Label"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                />
              </svg>
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <p
      class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained makeStyles-MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`should the click event sent on item click 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth makeStyles-MuiFormControl-root"
  >
    <div
      class="makeStyles-propertySectionLabel"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 makeStyles-typography makeStyles-MuiTypography-root"
      >
        myList
      </h6>
    </div>
    <table
      class="MuiTable-root makeStyles-MuiTable-root"
      data-testid="table-myList"
    >
      <tbody
        class="MuiTableBody-root makeStyles-MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root makeStyles-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-cell makeStyles-MuiTableCell-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-canBeSelectedItem makeStyles-style makeStyles-MuiTypography-root"
              data-testid="representation-item1Label"
            >
              item1Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall makeStyles-MuiButtonBase-root-MuiIconButton-root"
              data-testid="delete-representation-item1Label"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root makeStyles-MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-cell makeStyles-MuiTableCell-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-canBeSelectedItem makeStyles-style makeStyles-MuiTypography-root"
              data-testid="representation-item2Label"
            >
              item2Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall makeStyles-MuiButtonBase-root-MuiIconButton-root"
              data-testid="delete-representation-item2Label"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root makeStyles-MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-cell makeStyles-MuiTableCell-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-canBeSelectedItem makeStyles-style makeStyles-MuiTypography-root"
              data-testid="representation-item3Label"
            >
              item3Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall makeStyles-MuiButtonBase-root-MuiIconButton-root"
              data-testid="delete-representation-item3Label"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root makeStyles-MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <p
      class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained makeStyles-MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`should the click event sent on item click 2`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth makeStyles-MuiFormControl-root"
  >
    <div
      class="makeStyles-propertySectionLabel"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 makeStyles-typography makeStyles-MuiTypography-root"
      >
        myList
      </h6>
    </div>
    <table
      class="MuiTable-root makeStyles-MuiTable-root"
      data-testid="table-myList"
    >
      <tbody
        class="MuiTableBody-root makeStyles-MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root makeStyles-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-cell makeStyles-MuiTableCell-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-canBeSelectedItem makeStyles-style makeStyles-MuiTypography-root"
              data-testid="representation-item1Label"
            >
              item1Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall makeStyles-MuiButtonBase-root-MuiIconButton-root"
              data-testid="delete-representation-item1Label"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root makeStyles-MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-cell makeStyles-MuiTableCell-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-canBeSelectedItem makeStyles-style makeStyles-MuiTypography-root"
              data-testid="representation-item2Label"
            >
              item2Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall makeStyles-MuiButtonBase-root-MuiIconButton-root"
              data-testid="delete-representation-item2Label"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root makeStyles-MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root makeStyles-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-cell makeStyles-MuiTableCell-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-canBeSelectedItem makeStyles-style makeStyles-MuiTypography-root"
              data-testid="representation-item3Label"
            >
              item3Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall makeStyles-MuiButtonBase-root-MuiIconButton-root"
              data-testid="delete-representation-item3Label"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root makeStyles-MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <p
      class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained makeStyles-MuiFormHelperText-root"
    />
  </div>
</div>
`;
